fix: improve deployment configuration with environment variables
- Add environment variables to GitHub workflow for deployment
- Configure site base URL and domain through env variables
- Fix navigation links to use base path
- Add vite as explicit dependency

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -83,6 +83,9 @@ jobs:
             --site "${{ steps.pages.outputs.origin }}" \
             --base "${{ steps.pages.outputs.base_path }}"
         working-directory: ${{ env.BUILD_PATH }}
+        env:
+          CONFIG_WEBSITE: ${{ secrets.CONFIG_WEBSITE }}
+          CONFIG_BASE: ${{ secrets.CONFIG_BASE }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
